--- a/.gitignore
+++ b/.gitignore
@@ -22,9 +22,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-/.gradle/
 /.idea/
-/build/classes/
-/build/generated/
-/build/resources/
-/build/tmp/
+/backend/.gradle/**
+/backend/build/**
