--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "REACT_APP_API_BASE_URL=http://localhost:8080 react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "build:development": "REACT_APP_API_BASE_URL=https:xxxx react-scripts build"
   },
   "eslintConfig": {
     "extends": [
