--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "REACT_APP_API_BASE_URL=http://localhost:8080 react-scripts start",
     "build": "react-scripts build",
-    "build:development": "REACT_APP_API_BASE_URL=https:xxxx react-scripts build"
+    "build:development": "REACT_APP_API_BASE_URL=https://h2fpcoav22.execute-api.ap-northeast-1.amazonaws.com/test2/lambda-web-adapter react-scripts build"
   },
   "eslintConfig": {
     "extends": [
