--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,9 @@
   "scripts": {
     "start": "REACT_APP_API_BASE_URL=http://localhost:8080 react-scripts start",
     "build": "react-scripts build",
-    "build:development": "REACT_APP_API_BASE_URL=https://h2fpcoav22.execute-api.ap-northeast-1.amazonaws.com/test2 react-scripts build"
-  },
-  "eslintConfig": {
+      "build:development": "REACT_APP_API_BASE_URL=https://hogehoge.execute-api.ap-northeast-1.amazonaws.com/test2 react-scripts build"
+    },
+    "eslintConfig": {
     "extends": [
       "react-app"
     ]
